# poinstaller

./: README.md  dh_poinstaller  i18n.pm  pyproject.toml  setup.py
edupals/i18n/: poinstaller.py
src/: poinstaller.py
