[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "poinstaller" 
version = "0.2"
description = "Utility for install"
authors = [
	{ name = "Raul Rodrigo Segura", email="raulrodrigosegura@gmail.com" },
	{ name = "LliureX Team"}
]
license = {text="GPL-3"}
urls = {repository="https://github.com/edupals/poinstaller"}

[tool.setuptools]
script-files = [ "dh_poinstaller" ]
#data-files = [ ( "/usr/share/perl5/Debian/Debhelper/Sequence/", [ "i18n.pm" ] ) ]
